Fix broken splitpic image alignment

--- a/elements/bulbs-splitpic/bulbs-splitpic.scss
+++ b/elements/bulbs-splitpic/bulbs-splitpic.scss
@@ -27,6 +27,7 @@ bulbs-splitpic {
     }
 
     .splitpic-image {
+      position: relative;
       overflow: hidden;
       margin-top: 0px;
 
